Contest/811/debug/E811.txt
src/E811.cc: In member function ‘Node SegmentTree::mergecnt(Node, Node)’:
src/E811.cc:76:22: error: ‘sz’ was not declared in this scope
   for(int i = 0; i < sz; ++i){
                      ^~
src/E811.cc:77:6: error: ‘id’ was not declared in this scope
    S[id].L[i] = S[id<<1].L[i];
      ^~
src/E811.cc:77:6: note: suggested alternative: ‘i’
    S[id].L[i] = S[id<<1].L[i];
      ^~
      i
src/E811.cc:79:68: error: no matching function for call to ‘SegmentTree::pare(<brace-enclosed initializer list>)’
    if(S[id<<1].R[id] == S[(id<<1) + 1].L[i] and pare({i,S[id<<1].r}) != pare({i,S[id<<1 + 1].l})) {
                                                                    ^
src/E811.cc:18:6: note: candidate: pii SegmentTree::pare(pii)
  pii pare(pii i) {
      ^~~~
src/E811.cc:18:6: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘pii {aka std::pair<int, int>}’
src/E811.cc:79:96: error: no matching function for call to ‘SegmentTree::pare(<brace-enclosed initializer list>)’
    if(S[id<<1].R[id] == S[(id<<1) + 1].L[i] and pare({i,S[id<<1].r}) != pare({i,S[id<<1 + 1].l})) {
                                                                                                ^
src/E811.cc:18:6: note: candidate: pii SegmentTree::pare(pii)
  pii pare(pii i) {
      ^~~~
src/E811.cc:18:6: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘pii {aka std::pair<int, int>}’
src/E811.cc:81:48: error: no matching function for call to ‘SegmentTree::mergepare(<brace-enclosed initializer list>, <brace-enclosed initializer list>)’
     mergepare({i,S[id<<1].r},{i,S[id<<1 + 1].l});
                                                ^
src/E811.cc:23:7: note: candidate: void SegmentTree::mergepare(pii, pii)
  void mergepare(pii i, pii j) {
       ^~~~~~~~~
src/E811.cc:23:7: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘pii {aka std::pair<int, int>}’
